WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88331
[BlackBerry]Web Inspector highlight is slow
https://bugs.webkit.org/show_bug.cgi?id=88331
Summary
[BlackBerry]Web Inspector highlight is slow
Konrad Piascik
Reported
2012-06-05 08:09:38 PDT
[BlackBerry]Web Inspector highlight is slow
Attachments
Patch
(5.16 KB, patch)
2012-06-05 08:12 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konrad Piascik
Comment 1
2012-06-05 08:12:44 PDT
Created
attachment 145800
[details]
Patch
Arvid Nilsson
Comment 2
2012-06-05 08:15:29 PDT
Looks good to me, internal review: R+
Rob Buis
Comment 3
2012-06-05 08:15:46 PDT
Comment on
attachment 145800
[details]
Patch LGTM.
WebKit Review Bot
Comment 4
2012-06-05 09:23:58 PDT
Comment on
attachment 145800
[details]
Patch Clearing flags on attachment: 145800 Committed
r119496
: <
http://trac.webkit.org/changeset/119496
>
WebKit Review Bot
Comment 5
2012-06-05 09:24:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug