[BlackBerry]Web Inspector highlight is slow https://bugs.webkit.org/show_bug.cgi?id=88331

Patch by Konrad Piascik <kpiascik@rim.com> on 2012-06-05
Reviewed by Rob Buis.

Highlight is slow on large pages because of constant repaint calls.
Change to use the accelerated layer highlight all the time.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::renderContents):
* WebCoreSupport/InspectorClientBlackBerry.cpp:
(WebCore::InspectorClientBlackBerry::highlight):
(WebCore::InspectorClientBlackBerry::hideHighlight):
* WebCoreSupport/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::clear):
(WebCore::InspectorOverlay::update):

Canonical link: https://commits.webkit.org/106160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119496 268f45cc-cd09-0410-ab3c-d52691b4dbfc